circ_player more time centering

--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -162,9 +162,10 @@ button:hover {
 		left: 37px;
 	}
 }
+/*iphone5*/
 @media(min-width:320px){
 	#remaining {
-		left: 57px;
+		left: 58px;
 	}
 }
 /* Volume */
