--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -16,9 +16,9 @@
   	bottom: 0;
 }
 /*nexus 5*/
-@media(min-width:360px){
+@media(max-width:360px){
 	#circular_container, #circular_progress, #circular_player,.circular_cover {
-		margin-left: 9%;
+		margin-left: 6%;
 	}
 }
 /* positioning for iphone 6 */
