cir_player moar mobile positioning

--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -15,14 +15,27 @@
 	  right: 0;
   	bottom: 0;
 }
-/*nexus 5*/
-@media(max-width:360px){
+/*iphone 4 and 5*/
+@media(max-width:359px){
 	#circular_container, #circular_progress, #circular_player,.circular_cover {
 		margin-left: 6%;
 	}
 }
+/* positioning for nexus5 */
+@media(min-width:360px){
+	#circular_container, #circular_progress, #circular_player,.circular_cover {
+		margin-left: 9%;
+	}
+}
 /* positioning for iphone 6 */
 @media(min-width:375px){
+	#circular_container, #circular_progress, #circular_player,.circular_cover {
+		margin-left: 10%;
+	}
+}
+
+/* positioning for nexus 6 */
+@media(min-width:412px){
 	#circular_container, #circular_progress, #circular_player,.circular_cover {
 		margin-left: 12%;
 	}
