--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -330,7 +330,7 @@
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center" style="padding-bottom: 20px;">
-          <p class="audiodoc_abstact-bio">{{audiodocs[0].topic_description | safe}}</p>
+          <p class="audiodoc_abstract-bio">{{audiodocs[0].topic_description | safe}}</p>
           <p class="audiodoc_narrate-credits">narrated by {{ audiodocs[0].narration_credits }}</p>
           <p class="audiodoc_narrate-credits">music by {{ audiodocs[0].music_credits }}</p>
         </div>
