--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -382,7 +382,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p class="audiodoc_abstract-bio"> {{ audiodocs[0].author_bio | safe}} </p>
+              <p class="audiodoc_abstract-bio justify"> {{ audiodocs[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
