zoltan typo. also added by_in_colour_box for the homepage boxes

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -378,7 +378,7 @@
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -395,7 +395,7 @@
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -413,7 +413,7 @@
                 {{audiodocs[9].topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodocs[9].by_in_colour}}">by</i> <a href="audiodoc/{{audiodocs[9].url}}#author" class="highlight">{{audiodocs[9].author_name | safe}}</a> <i style="color: {{audiodocs[9].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[9].discipline}} </span>
+                <i style="color: {{audiodocs[9].by_in_colour}}; color: {{audiodocs[9].by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodocs[9].url}}#author" class="highlight">{{audiodocs[9].author_name | safe}}</a> <i style="color: {{audiodocs[9].by_in_colour}}; color: {{audiodocs[9].by_in_colour_box}};">in</i> <span class="highlight">{{audiodocs[9].discipline}} </span>
               </p>
             </div>
             <div>
@@ -427,7 +427,7 @@
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
