annotations: -yellow vertical bar. -adder postion at mousePosition. - annotation box is transparent

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -332,7 +332,7 @@
         </p>
       </div>
     </div>
-    <div class="container previous-audiodoc">
+    <div class="container previous-audiodoc audiodoc_page_box">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center" >
           <p class="audiodoc_bio">{{audiodocs[0].topic_description | safe}}</p>
