--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -108,15 +108,20 @@
     bottom: 15px;
     left: -18px;
     min-width: 265px;
-    background-color: rgba(251, 251, 251, 0.98);
+    /*background-color: rgba(251, 251, 251, 0.98);
     border: 1px solid rgba(122, 122, 122, 0.6);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;*/
+    border-left: solid 4px #FFC21C;
+    font-size: 30px;
+    text-align: left;
+    padding-left: 7px;
+    min-height: 50px;
+    /*-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     -o-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2)
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);*/
 }
 
 .annotator-invert-x .annotator-widget {
@@ -196,7 +201,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     color: #3c3c3c;
-    font-size: 13px;
+    font-size: 20px;
     font-style: italic;
     line-height: 1.3;
     border-top: 0
