--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -318,6 +318,11 @@ header .container {
   background-color: #F0F0F0;    /* #F8F8F8 */
   padding-top: 30px;
 }
+@media(min-width:768px){
+  .audiodoc_page_box{
+    width:1000px
+  }
+}
 header img {
     display: block;
     margin: 0 auto 20px;
