--- a/app/static/css/jquery.fancybox.css
+++ b/app/static/css/jquery.fancybox.css
@@ -185,6 +185,9 @@
 	display: none;
 	z-index: 8010;
 	background: url('/static/css/fancybox-helpers/fancybox_overlay.png');
+	/*background-color: rgb(119, 119, 119);*/
+	/*opacity: 0.7;*/
+
 }
 
 .fancybox-overlay-fixed {
@@ -210,6 +213,7 @@
 
 .fancybox-opened .fancybox-title {
 	visibility: visible;
+	text-align: center;
 }
 
 .fancybox-title-float-wrap {
