trying to parse opengraph info of remote URLs using javascript

--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -395,6 +395,9 @@
         </div>
 
         <div class="col-md-12" id="read">
+          <div id="bige">
+            lsls
+          </div>
           <div class="transcript" id="annotator_transcript"> <!-- transcript class gives the padding. annotator_transcript allows annotator to work -->
             {{ audiodocs[0].transcript | safe }}
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -528,6 +531,14 @@ jQuery(function ($) {
                }
                );
                });
+</script>
+<script src="/static/js/jquery.ogp.js"></script>
+<script type="text/javascript">
+  // var element = document.querySelector('meta[property="og:image"]');
+  // var content = element.getAttribute("content");
+  // var lediv = document.getElementById('bige');
+
+  lediv.innerHTML = jsondata
 </script>
 
 
