--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -105,9 +105,8 @@
 .annotator-widget {
     margin: 0;
     padding: 0;
-    bottom: 15px;
-    left: -18px;
-    min-width: 265px;
+    bottom: -130px;
+    left: 37px;
     border-left: solid 4px #FFC21C;
     font-size: 30px;
     text-align: left;
@@ -133,8 +132,8 @@
 }
 
 .annotator-invert-x .annotator-widget {
-    left: auto;
-    right: -18px
+    /*left: auto;*/
+    /*right: -18px*/ /* dunno what this line is for. It causes annotations to be on top of the text */
 }
 
 .annotator-invert-y .annotator-widget {
@@ -209,11 +208,17 @@
     padding-top: 12px;
     padding-bottom: 12px;
     color: #3c3c3c;
-    font-size: 20px;
+    font-size: 16px;
     font-style: italic;
-    line-height: 1.3;
-    border-top: 0
+    line-height: 1.5;
+    border-top: 0;
 }
+/*styles the image in the annotations*/
+.annotator-viewer div:first-of-type img{
+  width: 190px;
+  padding: 10px 0;
+}
+
 
 .annotator-viewer .annotator-controls {
     position: relative;
